tests/NormalTests/paczka1/fuzzy1/87976484.err
Error in line 1: 7qkNh42ln S823 78,8
Error in line 7: 7qkNh42ln S703 12,6
Error in line 25: CuGJiolCGVt S703 84,5
Error in line 27: 5RoTI S703 21,1
Error in line 12: S703 A157 337,7
Error in line 29: 5RoTI A157 52,2
